unpackaged/main/default/objects/LPlusACHTransactionVWs__x/LPlusACHTransactionVWs__x.object-meta.xml
<CustomObject>
    <description>LPlusACHTransactionVWs</description>
    <externalDataSource>LeasePlus</externalDataSource>
    <externalName>LPlusACHTransactionVWs</externalName>
    <label>LP ACH Current Setup</label>
    <pluralLabel>LPlusACHTransactionVWs</pluralLabel>
</CustomObject>