unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_comment__c.field-meta.xml
<CustomField>
    <fullName>achtrn_comment__c</fullName>
    <description>achtrn_comment</description>
    <externalDeveloperName>achtrn_comment</externalDeveloperName>
    <label>achtrn_comment</label>
    <length>128</length>
    <type>Text</type>
</CustomField>