unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_destbnk_contact__c.field-meta.xml
<CustomField>
    <fullName>achtrn_destbnk_contact__c</fullName>
    <description>achtrn_destbnk_contact</description>
    <externalDeveloperName>achtrn_destbnk_contact</externalDeveloperName>
    <label>achtrn_destbnk_contact</label>
    <length>128</length>
    <type>Text</type>
</CustomField>