unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_destbnk_DFI_Id_num__c.field-meta.xml
<CustomField>
    <fullName>achtrn_destbnk_DFI_Id_num__c</fullName>
    <description>achtrn_destbnk_DFI_Id_num</description>
    <externalDeveloperName>achtrn_destbnk_DFI_Id_num</externalDeveloperName>
    <label>DFI/Fnce Inst ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>