unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_destbnk_name__c.field-meta.xml
<CustomField>
    <fullName>achtrn_destbnk_name__c</fullName>
    <description>achtrn_destbnk_name</description>
    <externalDeveloperName>achtrn_destbnk_name</externalDeveloperName>
    <label>Bank</label>
    <length>128</length>
    <type>Text</type>
</CustomField>