unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_destbnk_PAP_country_code__c.field-meta.xml
<CustomField>
    <fullName>achtrn_destbnk_PAP_country_code__c</fullName>
    <description>achtrn_destbnk_PAP_country_code</description>
    <externalDeveloperName>achtrn_destbnk_PAP_country_code</externalDeveloperName>
    <label>achtrn_destbnk_PAP_country_code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>