unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_destbnk_PAP_fin_inst_id__c.field-meta.xml
<CustomField>
    <fullName>achtrn_destbnk_PAP_fin_inst_id__c</fullName>
    <description>achtrn_destbnk_PAP_fin_inst_id</description>
    <externalDeveloperName>achtrn_destbnk_PAP_fin_inst_id</externalDeveloperName>
    <label>achtrn_destbnk_PAP_fin_inst_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>