unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_destbnk_phone__c.field-meta.xml
<CustomField>
    <fullName>achtrn_destbnk_phone__c</fullName>
    <description>achtrn_destbnk_phone</description>
    <externalDeveloperName>achtrn_destbnk_phone</externalDeveloperName>
    <label>achtrn_destbnk_phone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>