unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_first_tran_date__c.field-meta.xml
<CustomField>
    <fullName>achtrn_first_tran_date__c</fullName>
    <description>achtrn_first_tran_date</description>
    <externalDeveloperName>achtrn_first_tran_date</externalDeveloperName>
    <label>achtrn_first_tran_date</label>
    <type>DateTime</type>
</CustomField>