unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_lead_days__c.field-meta.xml
<CustomField>
    <fullName>achtrn_lead_days__c</fullName>
    <description>achtrn_lead_days</description>
    <externalDeveloperName>achtrn_lead_days</externalDeveloperName>
    <label>achtrn_lead_days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>