unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_origbnk_address1__c.field-meta.xml
<CustomField>
    <fullName>achtrn_origbnk_address1__c</fullName>
    <description>achtrn_origbnk_address1</description>
    <externalDeveloperName>achtrn_origbnk_address1</externalDeveloperName>
    <label>achtrn_origbnk_address1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>