unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_origbnk_branch__c.field-meta.xml
<CustomField>
    <fullName>achtrn_origbnk_branch__c</fullName>
    <description>achtrn_origbnk_branch</description>
    <externalDeveloperName>achtrn_origbnk_branch</externalDeveloperName>
    <label>achtrn_origbnk_branch</label>
    <length>128</length>
    <type>Text</type>
</CustomField>