unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_origbnk_city__c.field-meta.xml
<CustomField>
    <fullName>achtrn_origbnk_city__c</fullName>
    <description>achtrn_origbnk_city</description>
    <externalDeveloperName>achtrn_origbnk_city</externalDeveloperName>
    <label>achtrn_origbnk_city</label>
    <length>128</length>
    <type>Text</type>
</CustomField>