unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_origbnk_fax__c.field-meta.xml
<CustomField>
    <fullName>achtrn_origbnk_fax__c</fullName>
    <description>achtrn_origbnk_fax</description>
    <externalDeveloperName>achtrn_origbnk_fax</externalDeveloperName>
    <label>achtrn_origbnk_fax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>