unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_origbnk_im_orig_name__c.field-meta.xml
<CustomField>
    <fullName>achtrn_origbnk_im_orig_name__c</fullName>
    <description>achtrn_origbnk_im_orig_name</description>
    <externalDeveloperName>achtrn_origbnk_im_orig_name</externalDeveloperName>
    <label>achtrn_origbnk_im_orig_name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>