unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_origbnk_im_orig_user_id__c.field-meta.xml
<CustomField>
    <fullName>achtrn_origbnk_im_orig_user_id__c</fullName>
    <description>achtrn_origbnk_im_orig_user_id</description>
    <externalDeveloperName>achtrn_origbnk_im_orig_user_id</externalDeveloperName>
    <label>achtrn_origbnk_im_orig_user_id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>