unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_origbnk_num__c.field-meta.xml
<CustomField>
    <fullName>achtrn_origbnk_num__c</fullName>
    <description>achtrn_origbnk_num</description>
    <externalDeveloperName>achtrn_origbnk_num</externalDeveloperName>
    <label>achtrn_origbnk_num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>