unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_origbnk_PAP_process_cntr__c.field-meta.xml
<CustomField>
    <fullName>achtrn_origbnk_PAP_process_cntr__c</fullName>
    <description>achtrn_origbnk_PAP_process_cntr</description>
    <externalDeveloperName>achtrn_origbnk_PAP_process_cntr</externalDeveloperName>
    <label>achtrn_origbnk_PAP_process_cntr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>