unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_origbnk_PAP_stlmnt_acct__c.field-meta.xml
<CustomField>
    <fullName>achtrn_origbnk_PAP_stlmnt_acct__c</fullName>
    <description>achtrn_origbnk_PAP_stlmnt_acct</description>
    <externalDeveloperName>achtrn_origbnk_PAP_stlmnt_acct</externalDeveloperName>
    <label>achtrn_origbnk_PAP_stlmnt_acct</label>
    <length>128</length>
    <type>Text</type>
</CustomField>