unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_origbnk_participation__c.field-meta.xml
<CustomField>
    <fullName>achtrn_origbnk_participation__c</fullName>
    <description>achtrn_origbnk_participation</description>
    <externalDeveloperName>achtrn_origbnk_participation</externalDeveloperName>
    <label>achtrn_origbnk_participation</label>
    <length>128</length>
    <type>Text</type>
</CustomField>