unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_origbnk_process_type__c.field-meta.xml
<CustomField>
    <fullName>achtrn_origbnk_process_type__c</fullName>
    <description>achtrn_origbnk_process_type</description>
    <externalDeveloperName>achtrn_origbnk_process_type</externalDeveloperName>
    <label>achtrn_origbnk_process_type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>