unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_origbnk_state__c.field-meta.xml
<CustomField>
    <fullName>achtrn_origbnk_state__c</fullName>
    <description>achtrn_origbnk_state</description>
    <externalDeveloperName>achtrn_origbnk_state</externalDeveloperName>
    <label>achtrn_origbnk_state</label>
    <length>128</length>
    <type>Text</type>
</CustomField>