unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_pap_dest_currency__c.field-meta.xml
<CustomField>
    <fullName>achtrn_pap_dest_currency__c</fullName>
    <description>achtrn_pap_dest_currency</description>
    <externalDeveloperName>achtrn_pap_dest_currency</externalDeveloperName>
    <label>achtrn_pap_dest_currency</label>
    <length>128</length>
    <type>Text</type>
</CustomField>