unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_prenote_date__c.field-meta.xml
<CustomField>
    <fullName>achtrn_prenote_date__c</fullName>
    <description>achtrn_prenote_date</description>
    <externalDeveloperName>achtrn_prenote_date</externalDeveloperName>
    <label>achtrn_prenote_date</label>
    <type>DateTime</type>
</CustomField>