unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/achtrn_prenote_sent__c.field-meta.xml
<CustomField>
    <fullName>achtrn_prenote_sent__c</fullName>
    <description>achtrn_prenote_sent</description>
    <externalDeveloperName>achtrn_prenote_sent</externalDeveloperName>
    <label>achtrn_prenote_sent</label>
    <length>128</length>
    <type>Text</type>
</CustomField>