unpackaged/main/default/objects/LPlusACHTransactionVWs__x/fields/LP_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>LP_Customer_Id__c</fullName>
    <externalDeveloperName>achtrn_cust_num</externalDeveloperName>
    <label>Lease Plus Customer</label>
    <length>128</length>
    <referenceTo>CVLeaseCustomerVWs__x</referenceTo>
    <relationshipLabel>LP ACH Current Setup</relationshipLabel>
    <relationshipName>LPlusACHTransactionVWs</relationshipName>
    <type>ExternalLookup</type>
</CustomField>